* Made GameLib and the example programs use the Type property of the event
  class instead of checking the type dynamically.
! Made the type field of the Event class private (it was never supposed to
  be public)
+ Added joystick support to the Input example
+ Added an Offset property to the JoyBallEvent class
* Fixed a bug that can occur when deinitializing joysticks
! The SubType property of the WindowEvent class is now read-only
! Made several WindowEvent-derived classes internal (they shouldn't be
  used in user code)
! Removed the Events.UpdateQueue method and the Events.SyncRoot property.
  They were basically unnecessary.
+ Added a Size property to the ResizeEvent class
! Changed the ExceptionEvent class (new constructor, field name change, ...)
! Changed Events.QueueSize to Events.Count
* Made Events make proper use of multicast delegates for EventProcedure and
  IdleProcedure
! Removed the Font.CenterOff methods
+ Reworked BitmapFont so it can handle variable-width fonts too
! Renamed NonFixedFont to StyledFont, which is a much better name for it
+ Added a method (PixelFormat.IsCompatible) to check whether a pixel format
  is compatible with another (which means that no conversion would be
  necessary between them), and another, related method (Surface.IsCompatible)
+ Added more flexibility to the fonts regarding background color
! Renamed TrueTypeFont.CacheSize to TrueTypeFont.MaxCacheSize
* Improved the implementation of shaded fonts with regards to color
! Made BitmapFont take vertical spacing instead of line skip
! Removed the Keyboard.Press and Keyboard.Release methods
! Made Joystick.Ball report absolute coordinates rather than relative ones
* Fixed bug where joysticks wouldn't query their initial state
+ Added some more documentation (for CD.cs, Events.cs, Fonts.cs, Input.cs,
  OpenGL.cs, OpenGLInterop.cs, Surface.cs, and Video.cs).
* A couple bugfixes I forgot to add to the changelog

2004.02.07 (alpha/beta)
-----------------
* First public release