@@ -1,0 +1,24 @@
+/*
+GameLib is a library for developing games and other multimedia applications.
+http://www.adammil.net/
+Copyright (C) 2002-2004 Adam Milazzo
+
+This program is free software; you can redistribute it and/or
+modify it under the terms of the GNU General Public License
+as published by the Free Software Foundation; either version 2
+of the License, or (at your option) any later version.
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+You should have received a copy of the GNU General Public License
+along with this program; if not, write to the Free Software
+Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+*/
+
+#include "Utility.h"
+#include <string.h>
+
+void GLU_MemCopy(void *src, void *dest, int length) { memcpy(dest, src, length); }
+void GLU_MemFill(void *dest, Uint8 value, int length) { memset(dest, value, length); }
+void GLU_MemMove(void *src, void *dest, int length) { memmove(dest, src, length); }
