@@ -103,8 +103,9 @@ Legend
 ! Removed the Keyboard.Press and Keyboard.Release methods
 ! Made Joystick.Ball report absolute coordinates rather than relative ones
 * Fixed bug where joysticks wouldn't query their initial state
++ Doubled speed of Unsafe.Copy and Unsafe.Fill, and added Unsafe.SafeCopy
 + Added some more documentation (for CD.cs, Events.cs, Fonts.cs, Input.cs,
-  OpenGL.cs, OpenGLInterop.cs, Surface.cs, and Video.cs).
+  Interop.cs, OpenGL.cs, OpenGLInterop.cs, Surface.cs, and Video.cs).
 * A couple bugfixes I forgot to add to the changelog
 
 2004.02.07 (alpha/beta)
